[gd_scene load_steps=18 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://RichTextLabel.gd" type="Script" id=2]
[ext_resource path="res://Tooltip.gd" type="Script" id=3]
[ext_resource path="res://Tooltip.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.329412, 0.309804, 0.345098, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.380038, 0.358258, 0.397461, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.286275, 0.266667, 0.301961, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.192157, 0.184314, 0.207843, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://DroidSans.ttf"

[sub_resource type="DynamicFont" id=8]
size = 20
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 10
extra_spacing_bottom = 10
font_data = SubResource( 7 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0, 0, 0.35 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.333333, 0.309804, 0.34902, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.383651, 0.357076, 0.401367, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.286275, 0.266667, 0.301961, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.396078, 0.368627, 0.415686, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.442539, 0.412679, 0.463867, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.337255, 0.313726, 0.356863, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
shadow_offset = Vector2( 2, 2 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Fundo" type="Panel" parent="."]
modulate = Color( 0.427451, 0.427451, 0.427451, 1 )
margin_right = 1280.0
margin_bottom = 720.0

[node name="Menu" type="HBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 1020.0
margin_bottom = 50.0
custom_constants/separation = 10

[node name="MAIN" type="Button" parent="Menu"]
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )
focus_mode = 0
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
enabled_focus_mode = 0
text = "MAIN"

[node name="STATUS" type="Button" parent="Menu"]
margin_left = 110.0
margin_right = 210.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )
focus_mode = 0
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
enabled_focus_mode = 0
text = "STATUS"

[node name="ABSORTITION" type="Button" parent="Menu"]
margin_left = 220.0
margin_right = 320.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )
focus_mode = 0
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
enabled_focus_mode = 0
text = "ABSORPTION"

[node name="OPTIONS" type="Button" parent="Menu"]
margin_left = 330.0
margin_right = 430.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )
focus_mode = 0
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
enabled_focus_mode = 0
text = "OPTIONS"

[node name="MD" type="Panel" parent="."]
self_modulate = Color( 0.701961, 0.701961, 0.701961, 1 )
anchor_left = 0.805
anchor_right = 0.805
margin_right = 250.0
margin_bottom = 720.0

[node name="RichTextLabel" type="RichTextLabel" parent="MD"]
margin_left = 5.0
margin_top = 5.0
margin_right = 245.0
margin_bottom = 245.0
size_flags_horizontal = 0
size_flags_vertical = 0
scroll_following = true
script = ExtResource( 2 )

[node name="All" type="ScrollContainer" parent="MD"]
margin_left = 5.0
margin_top = 250.0
margin_right = 245.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Prog" type="VBoxContainer" parent="MD/All"]
margin_right = 240.0
margin_bottom = 470.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="Fate" type="GridContainer" parent="MD/All/Prog"]
margin_right = 240.0
margin_bottom = 14.0
columns = 2

[node name="FateN" type="Label" parent="MD/All/Prog/Fate"]
margin_right = 118.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Fate"
align = 1
valign = 1

[node name="FateP" type="ProgressBar" parent="MD/All/Prog/Fate"]
margin_left = 122.0
margin_right = 240.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 2.0
percent_visible = false

[node name="FateB" type="HBoxContainer" parent="MD/All/Prog/Fate/FateP"]
margin_right = 117.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FateLabel" type="Label" parent="MD/All/Prog/Fate/FateP/FateB"]
margin_right = 52.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "0"
align = 2
valign = 1

[node name="FateDash" type="Label" parent="MD/All/Prog/Fate/FateP/FateB"]
margin_left = 56.0
margin_right = 61.0
margin_bottom = 14.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "/"
align = 1
valign = 1

[node name="FateMax" type="Label" parent="MD/All/Prog/Fate/FateP/FateB"]
margin_left = 65.0
margin_right = 117.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "10"
valign = 1

[node name="Destiny" type="GridContainer" parent="MD/All/Prog"]
margin_top = 19.0
margin_right = 240.0
margin_bottom = 33.0
columns = 2

[node name="DestinyN" type="Label" parent="MD/All/Prog/Destiny"]
margin_right = 118.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Destiny"
align = 1
valign = 1

[node name="DestinyB" type="ProgressBar" parent="MD/All/Prog/Destiny"]
margin_left = 122.0
margin_right = 240.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 2.0
percent_visible = false

[node name="DestinyLabel" type="Label" parent="MD/All/Prog/Destiny/DestinyB"]
margin_right = 52.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "0"
align = 2
valign = 1

[node name="DestinyDash" type="Label" parent="MD/All/Prog/Destiny/DestinyB"]
margin_left = 56.0
margin_right = 61.0
margin_bottom = 14.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "/"
align = 1
valign = 1

[node name="DestinyMax" type="Label" parent="MD/All/Prog/Destiny/DestinyB"]
margin_left = 65.0
margin_right = 117.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "10"
valign = 1

[node name="Fortune" type="GridContainer" parent="MD/All/Prog"]
margin_top = 38.0
margin_right = 240.0
margin_bottom = 52.0
columns = 2

[node name="FortuneN" type="Label" parent="MD/All/Prog/Fortune"]
margin_right = 118.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Fortune"
align = 1
valign = 1

[node name="FortuneB" type="ProgressBar" parent="MD/All/Prog/Fortune"]
margin_left = 122.0
margin_right = 240.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 2.0
percent_visible = false

[node name="FortuneLabel" type="Label" parent="MD/All/Prog/Fortune/FortuneB"]
margin_right = 52.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "0"
align = 2
valign = 1

[node name="FortuneDash" type="Label" parent="MD/All/Prog/Fortune/FortuneB"]
margin_left = 56.0
margin_right = 61.0
margin_bottom = 14.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "/"
align = 1
valign = 1

[node name="FortuneMax" type="Label" parent="MD/All/Prog/Fortune/FortuneB"]
margin_left = 65.0
margin_right = 117.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "10"
valign = 1

[node name="Pri" type="Panel" parent="."]
margin_left = 10.0
margin_top = 60.0
margin_right = 255.0
margin_bottom = 710.0
rect_pivot_offset = Vector2( 322, 283 )
custom_styles/panel = SubResource( 12 )

[node name="Activities" type="Label" parent="Pri"]
margin_right = 245.0
margin_bottom = 50.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 8 )
custom_styles/normal = SubResource( 14 )
text = "activities"
align = 1
valign = 1
uppercase = true

[node name="ActivitiesC" type="ScrollContainer" parent="Pri"]
margin_top = 50.0
margin_right = 245.0
margin_bottom = 710.0

[node name="ActivitiesC2" type="VBoxContainer" parent="Pri/ActivitiesC"]
margin_right = 245.0
margin_bottom = 660.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="UnkB" type="Button" parent="Pri/ActivitiesC/ActivitiesC2"]
margin_right = 245.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
focus_mode = 0
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/normal = SubResource( 13 )
enabled_focus_mode = 0
text = "??? Activities"

[node name="UnkAC" type="VBoxContainer" parent="Pri/ActivitiesC/ActivitiesC2"]
margin_top = 25.0
margin_right = 245.0
margin_bottom = 660.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SearchA" type="Button" parent="Pri/ActivitiesC/ActivitiesC2/UnkAC"]
margin_left = 7.0
margin_right = 237.0
margin_bottom = 40.0
rect_min_size = Vector2( 230, 40 )
rect_pivot_offset = Vector2( 156, 55 )
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
enabled_focus_mode = 0
text = "Search around"

[node name="Seg" type="Panel" parent="."]
margin_left = 265.0
margin_top = 60.0
margin_right = 510.0
margin_bottom = 710.0
rect_pivot_offset = Vector2( 322, 283 )
custom_styles/panel = SubResource( 12 )

[node name="Actions" type="Label" parent="Seg"]
margin_right = 245.0
margin_bottom = 50.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 8 )
custom_styles/normal = SubResource( 14 )
text = "actions"
align = 1
valign = 1
uppercase = true

[node name="ActionsC" type="ScrollContainer" parent="Seg"]
margin_top = 50.0
margin_right = 245.0
margin_bottom = 710.0

[node name="ActionsC2" type="VBoxContainer" parent="Seg/ActionsC"]
margin_right = 245.0
margin_bottom = 660.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="FateB" type="Button" parent="Seg/ActionsC/ActionsC2"]
margin_right = 245.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
focus_mode = 0
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/normal = SubResource( 13 )
enabled_focus_mode = 0
text = "Fate Actions"

[node name="FateAC" type="VBoxContainer" parent="Seg/ActionsC/ActionsC2"]
margin_top = 25.0
margin_right = 245.0
margin_bottom = 660.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Rest" type="Button" parent="Seg/ActionsC/ActionsC2/FateAC"]
margin_left = 7.0
margin_right = 237.0
margin_bottom = 40.0
rect_min_size = Vector2( 230, 40 )
rect_pivot_offset = Vector2( 156, 55 )
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
enabled_focus_mode = 0
text = "Rest"

[node name="Ter" type="Panel" parent="."]
margin_left = 520.0
margin_top = 60.0
margin_right = 765.0
margin_bottom = 710.0
rect_pivot_offset = Vector2( 322, 283 )
custom_styles/panel = SubResource( 12 )

[node name="Story" type="Label" parent="Ter"]
margin_right = 245.0
margin_bottom = 50.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 8 )
custom_styles/normal = SubResource( 14 )
text = "story"
align = 1
valign = 1
uppercase = true

[node name="StoryC" type="ScrollContainer" parent="Ter"]
margin_top = 50.0
margin_right = 245.0
margin_bottom = 710.0

[node name="StoryC2" type="VBoxContainer" parent="Ter/StoryC"]
margin_right = 245.0
margin_bottom = 660.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="ANewBeg" type="Button" parent="Ter/StoryC/StoryC2"]
margin_right = 245.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
focus_mode = 0
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/normal = SubResource( 13 )
enabled_focus_mode = 0
text = "A new beginning"

[node name="ANewBeg2" type="VBoxContainer" parent="Ter/StoryC/StoryC2"]
margin_top = 25.0
margin_right = 245.0
margin_bottom = 660.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Wake up" type="Button" parent="Ter/StoryC/StoryC2/ANewBeg2"]
margin_left = 7.0
margin_right = 237.0
margin_bottom = 40.0
rect_min_size = Vector2( 230, 40 )
rect_pivot_offset = Vector2( 156, 55 )
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
shortcut_in_tooltip = false
action_mode = 0
enabled_focus_mode = 0
text = "Wake up"
__meta__ = {
"_editor_description_": ""
}

[node name="Tooltip" type="Node" parent="Ter/StoryC/StoryC2/ANewBeg2"]
script = ExtResource( 3 )
__meta__ = {
"_editor_description_": ""
}
visuals_res = ExtResource( 4 )
owner_path = NodePath("../Wake up")

[node name="Quar" type="Panel" parent="."]
margin_left = 775.0
margin_top = 60.0
margin_right = 1020.0
margin_bottom = 710.0
rect_pivot_offset = Vector2( 322, 283 )
custom_styles/panel = SubResource( 12 )

[node name="Battles" type="Label" parent="Quar"]
margin_right = 245.0
margin_bottom = 50.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 8 )
custom_styles/normal = SubResource( 14 )
text = "battles"
align = 1
valign = 1
uppercase = true

[node name="BattlesC" type="ScrollContainer" parent="Quar"]
margin_top = 50.0
margin_right = 245.0
margin_bottom = 710.0

[node name="BattlesC2" type="VBoxContainer" parent="Quar/BattlesC"]
margin_right = 245.0
margin_bottom = 660.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="Survive" type="Button" parent="Quar/BattlesC/BattlesC2"]
margin_right = 245.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
focus_mode = 0
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/normal = SubResource( 13 )
enabled_focus_mode = 0
text = "Survive"

[node name="LowCrea" type="VBoxContainer" parent="Quar/BattlesC/BattlesC2"]
margin_top = 25.0
margin_right = 245.0
margin_bottom = 660.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Rats" type="Button" parent="Quar/BattlesC/BattlesC2/LowCrea"]
margin_left = 7.0
margin_right = 237.0
margin_bottom = 40.0
rect_min_size = Vector2( 230, 40 )
rect_pivot_offset = Vector2( 156, 55 )
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
enabled_focus_mode = 0
text = "Rats"

[node name="Tooltip" type="Node" parent="Quar/BattlesC/BattlesC2/LowCrea"]
script = ExtResource( 3 )
__meta__ = {
"_editor_description_": ""
}
visuals_res = ExtResource( 4 )
owner_path = NodePath("../Rats")

[connection signal="pressed" from="Pri/ActivitiesC/ActivitiesC2/UnkB" to="." method="_on_UnkB_pressed"]
[connection signal="pressed" from="Pri/ActivitiesC/ActivitiesC2/UnkAC/SearchA" to="." method="_on_SearchA_pressed"]
[connection signal="pressed" from="Seg/ActionsC/ActionsC2/FateB" to="." method="_on_FateB_pressed"]
[connection signal="pressed" from="Seg/ActionsC/ActionsC2/FateAC/Rest" to="." method="_on_Rest_pressed"]
[connection signal="pressed" from="Ter/StoryC/StoryC2/ANewBeg" to="." method="_on_ANewBeg_pressed"]
[connection signal="mouse_entered" from="Ter/StoryC/StoryC2/ANewBeg2/Wake up" to="." method="_on_Wake_up_mouse_entered"]
[connection signal="pressed" from="Ter/StoryC/StoryC2/ANewBeg2/Wake up" to="." method="_on_Wake_up_pressed"]
[connection signal="pressed" from="Quar/BattlesC/BattlesC2/Survive" to="." method="_on_Survive_pressed"]
[connection signal="mouse_entered" from="Quar/BattlesC/BattlesC2/LowCrea/Rats" to="." method="_on_Rats_mouse_entered"]
[connection signal="pressed" from="Quar/BattlesC/BattlesC2/LowCrea/Rats" to="." method="_on_Rats_pressed"]
